# mssql-extension

./: .clang-format  .codespellrc  .dockerignore  .env.example  .gitignore  .gitmodules  AZURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DATAMODEL.md  DEVELOPMENT.md  Kerberos.md  LICENSE  MEMORY.md  Makefile  NOTICE  README.md  agents.md  description.yml  extension_config.cmake  vcpkg.json
.clusterfuzzlite/: Dockerfile  build.sh
.github/: FUNDING.yml  dependabot.yml
.github/scripts/: scan_pr_injection.py
.github/workflows/: cflite-pr.yml  ci.yml  codeql.yml  concurrency-tests.yml  kerberos.yml  lint-extra.yml  named-instance.yml  pages.yml  pr-injection-scan.yml  release.yml  security-scan.yml  update-metrics.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
LICENSES/: openssl-LICENSE.txt  simdutf-LICENSE-MIT.txt
docker/: Dockerfile.build  docker-compose.linux-ci.yml  docker-compose.yml
docker/init/: init-transaction-tests.sql  init.sql
docs/: DATA_TYPES_AND_FEATURES.md  TESTING.md  architecture.md  catalog-integration.md  connection-management.md  fedauth_research.md  query-execution.md  tds-protocol.md  transactions.md  type-mapping.md
docs/proposals/: issue-178-concurrent-crash-analysis.md
feature-spec/: order-pushdown.md  refactoring-codec-044.md  refactoring-foundation-043.md  refactoring-v0.2.md
future-specs/azure/: 001-azure-secret-reuse.md  002-extend-mssql-secret.md  003-azure-auth-test-function.md  004-auth-flow-integration.md  005-validation-tests.md  006-catalog-data-integration.md  phase1-azure-token-infrastructure.md  phase2-tds-fedauth-integration.md  research.md  spec.md
fuzz/: .gitignore  Dockerfile  README.md  build.sh  fuzz_browser_response.cc  fuzz_envchange_txn.cc  fuzz_login_response.cc  fuzz_tds_tokens.cc  fuzz_utf16.cc  run.sh  tds.dict
fuzz/corpus/: .gitattributes
scripts/: update_download_metrics.py
scripts/ci/: fetch_duckdb.sh  integration_test.sh  smoke_test.sh  winsspi_test.ps1
scripts/sql/: smoke_test.sql
specs/001-attach-connection-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-azure-token-infrastructure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-code-cleanup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-extension-ci-tools-integration/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mssql-transactions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pk-rowid-semantics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-project-bootstrap/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tds-fedauth-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-dml-update-delete/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-duckdb-surface-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-tds-connection-pooling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-streaming-select-cancel/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-tls-connection-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-split-tls-build/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-catalog-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-catalog-ddl-statistics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-dml-insert/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-extension-documentation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-ci-release-workflows/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-docs-platform-refresh/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-table-scan-filter-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-ci-test-skip/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-windows-ci-build/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-readme-ddl-examples/: spec.md  tasks.md
specs/019-fix-winsock-init/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-multi-statement-scan/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-multi-resultset-error/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-mssql-ctas/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/023-pool-stats-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/024-mssql-copy-bcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/025-bcp-improvements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/026-varchar-nvarchar-conversion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/027-ctas-bcp-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/028-ansi-connection-options/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/029-incremental-catalog-cache/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
src/: mssql_extension.cpp  mssql_functions.cpp  mssql_secret.cpp  mssql_storage.cpp
src/tls/: CMakeLists.txt  mbedtls_compat.h  mbedtls_prefix.h  tds_tls_context.cpp  tds_tls_context.hpp  tds_tls_impl.cpp  tds_tls_impl.hpp  tds_tls_stub.cpp
test/: README.md  TLS_TESTING.md  compare_login7.cpp  debug_multipacket.cpp  debug_query.cpp
toolchains/: x64-windows-static-md-release-vs2019comp.cmake
triplets/: x64-windows-static-md.cmake
web/: index.html
(+786 files in other folders)
